[package]
name = "msisdn-extract-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
dotenvy = "0.15.7"
glob = "0.3.3"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-serial = "5.4.5"
